--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
   </head>
   <body>
+    <h1>JavaScriptの変数を宣言</h1>
     <script src="app.js"></script>
   </body>
 </html>
